feat: commit blog route

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb+srv://admin:unheardDB@cluster0.fauak.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://admin:unheardDB@cluster0.fauak.mongodb.net/mySecondDatabase?retryWrites=true&w=majority
 
 # ACR creds
 
